--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "gogaucho-ignacio-simonetti",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -20,6 +19,7 @@
   "homepage": "https://github.com/ignasimonetti/Coder-GoGaucho#readme",
   "devDependencies": {
     "node-sass": "^7.0.1",
-    "nodemon": "^2.0.15"
-  }
+    "nodemon": "^2.0.16"
+  },
+  "description": ""
 }
